Fix MenuMobile overflow

--- a/wp-content/themes/immo-waldhof/src/styles/_base.scss
+++ b/wp-content/themes/immo-waldhof/src/styles/_base.scss
@@ -1,5 +1,10 @@
 html {
   overflow-x: hidden;
+
+  &.openMenu {
+    height: 100%;
+    overflow-y: hidden;
+  }
 }
 
 body {
@@ -9,11 +14,6 @@ body {
   background-color: var(--color-beige-light);
   color: var(--color-grey);
   overflow-x: hidden;
-
-  &.openMenu {
-    overflow-y: hidden;
-    height: 100vh;
-  }
 }
 
 .container {
